Bug Fix | Editor | Z-index issue

--- a/src/bundles/wsu-design-system.wordpress.editor.scss
+++ b/src/bundles/wsu-design-system.wordpress.editor.scss
@@ -108,6 +108,7 @@
     z-index: 999998 !important;
 }
 
+.wsu-image-frame .components-placeholder,
 .wsu-image-frame-control__button {
     position: relative;
     z-index: 999999 !important;
